--- a/game/WebDevSim-Game/Assembly-CSharp.csproj
+++ b/game/WebDevSim-Game/Assembly-CSharp.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Assets\Scripts\showUI.cs" />
     <Compile Include="Assets\Scripts\SO_scripts\Add.cs" />
     <Compile Include="Assets\Scripts\SO_scripts\Background.cs" />
+    <Compile Include="Assets\Scripts\SO_scripts\Color.cs" />
     <Compile Include="Assets\Scripts\SO_scripts\Commands.cs" />
     <Compile Include="Assets\Scripts\SO_scripts\Create.cs" />
     <Compile Include="Assets\Scripts\SO_scripts\Examine.cs" />
