--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,17 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+webite/client/node_modules
+webite/server/node_modules
+webite/node_modules
 /.pnp
 .pnp.js
 
 # testing
-/coverage
+webite/client/coverage
 
 # production
-/build
+webite/client/build
 
 # misc
 .DS_Store
