--- a/website/client/package.json
+++ b/website/client/package.json
@@ -11,6 +11,7 @@
     "concurrently": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "firebase": "^7.9.1",
     "jquery": "^3.4.1",
     "multer": "^1.4.2",
     "nodemon": "^2.0.2",
