--- a/website/client/package.json
+++ b/website/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "client",
   "version": "0.1.0",
-  "proxy": "http://localhost:5000/",
+  "proxy":"http://localhost:5000/",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.12.1",
     "@testing-library/jest-dom": "^4.2.4",
@@ -9,16 +9,13 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "concurrently": "^5.1.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
     "firebase": "^7.9.1",
     "jquery": "^3.4.1",
     "multer": "^1.4.2",
-    "nodemon": "^2.0.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^3.4.0",
     "react-unity-webgl": "^7.1.10",
     "uuid": "^3.4.0"
   },
@@ -28,9 +25,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "watch": "nodemon ./server/server.js",
-    "client": "cd client && yarn start",
-    "server": "node ./server/server.js",
-    "dev": "concurrently --kill-others-on-fail \"nodemon ./server/server.js\" \"nodemon client\""
+    "client": "npm start",
+    "server": "cd ../server && npm start",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "eslintConfig": {
     "extends": "react-app"
